# enterprise_content_rag_chatbot

./: .copier-answers.yml  .env copy.sample  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  MLproject  Makefile  README.md  invoke.yaml  noxfile.py  pyproject.toml  sonar-project.properties  start_all.sh
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  publish.yml  update.yml
chatbot/: chainlit_app.py  chat_history.json  langchain_agent.py  requirements.txt
mcp-server-elasticsearch/: oficial_replication.py
mcp-server-elasticsearch/chat/: server.py
mcp-server-elasticsearch/chat/.files/bc600c09-eebc-4b1c-bf59-f87f105464bb/: 5de49402-6965-41be-8374-693e6b5965b2.txt  b45a3021-68ae-45b1-99cc-fa39dce68fae.txt
scripts/: oficial_replication.py  server.py
scripts/chat/: README.md  chat.py  main.py  server.py
src/elastic/mcp/fastmcp/: __init__.py
src/elastic/mcp/fastmcp/servers/: __init__.py  elk.py  es.py  kibana.py
src/ml_rd_mcp/servers/: __init__.py  elk.py  es.py  kibana.py
tasks/: __init__.py  checks.py  cleans.py  installs.py  mlflow.py  projects.py  testing.py
tests/unit/: conftest.py
tests/unit/servers/: test_elk.py
